--- a/fast64_internal/f3d/node_library/Advanced_Texture_Settings.json
+++ b/fast64_internal/f3d/node_library/Advanced_Texture_Settings.json
@@ -15,12 +15,14 @@
 			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input"
+					"name": "Input",
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.005",
@@ -44,12 +46,14 @@
 			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input"
+					"name": "Input",
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Reroute.002",
@@ -73,18 +77,22 @@
 			"width": 140.0,
 			"inputs": {
 				"0": {
-					"name": "X"
+					"name": "X",
+					"enabled": true
 				},
 				"1": {
-					"name": "Y"
+					"name": "Y",
+					"enabled": true
 				},
 				"2": {
-					"name": "Z"
+					"name": "Z",
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Vector",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group Output",
@@ -109,10 +117,12 @@
 			"width": 140.0,
 			"inputs": {
 				"0": {
-					"name": "UV"
+					"name": "UV",
+					"enabled": true
 				},
 				"1": {
-					"name": ""
+					"name": "",
+					"enabled": true
 				}
 			}
 		},
@@ -130,12 +140,14 @@
 			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input"
+					"name": "Input",
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Combine XYZ",
@@ -159,12 +171,14 @@
 			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input"
+					"name": "Input",
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Combine XYZ",
@@ -188,12 +202,14 @@
 			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input"
+					"name": "Input",
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Reroute.026",
@@ -222,36 +238,45 @@
 			"inputs": {
 				"0": {
 					"name": "Tex Coordinate",
-					"default_value": 0.5
+					"default_value": 0.5,
+					"enabled": true
 				},
 				"1": {
-					"name": "Shift"
+					"name": "Shift",
+					"enabled": true
 				},
 				"2": {
 					"name": "Low",
-					"default_value": 0.5
+					"default_value": 0.5,
+					"enabled": true
 				},
 				"3": {
 					"name": "High",
-					"default_value": 0.5
+					"default_value": 0.5,
+					"enabled": true
 				},
 				"4": {
-					"name": "Mask"
+					"name": "Mask",
+					"enabled": true
 				},
 				"5": {
 					"name": "Tex Size",
-					"default_value": 0.5
+					"default_value": 0.5,
+					"enabled": true
 				},
 				"6": {
-					"name": "Clamp"
+					"name": "Clamp",
+					"enabled": true
 				},
 				"7": {
-					"name": "Mirror"
+					"name": "Mirror",
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "UV Coord",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Reroute.027",
@@ -276,6 +301,7 @@
 			"outputs": {
 				"0": {
 					"name": "X",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.006",
@@ -285,6 +311,7 @@
 				},
 				"1": {
 					"name": "S Shift",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.006",
@@ -294,6 +321,7 @@
 				},
 				"2": {
 					"name": "S Low",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.006",
@@ -303,6 +331,7 @@
 				},
 				"3": {
 					"name": "S High",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.006",
@@ -312,6 +341,7 @@
 				},
 				"4": {
 					"name": "S Mask",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.006",
@@ -321,6 +351,7 @@
 				},
 				"5": {
 					"name": "S TexSize",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.006",
@@ -330,6 +361,7 @@
 				},
 				"6": {
 					"name": "S Clamp",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.006",
@@ -339,6 +371,7 @@
 				},
 				"7": {
 					"name": "S Mirror",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.006",
@@ -348,6 +381,7 @@
 				},
 				"8": {
 					"name": "Y",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Reroute.001",
@@ -357,6 +391,7 @@
 				},
 				"9": {
 					"name": "T Shift",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.005",
@@ -366,6 +401,7 @@
 				},
 				"10": {
 					"name": "T Low",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.005",
@@ -375,6 +411,7 @@
 				},
 				"11": {
 					"name": "T High",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.005",
@@ -384,6 +421,7 @@
 				},
 				"12": {
 					"name": "T Mask",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.005",
@@ -393,6 +431,7 @@
 				},
 				"13": {
 					"name": "T TexSize",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.005",
@@ -402,6 +441,7 @@
 				},
 				"14": {
 					"name": "T Clamp",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.005",
@@ -411,12 +451,17 @@
 				},
 				"15": {
 					"name": "T Mirror",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.005",
 							"index": 7
 						}
 					]
+				},
+				"16": {
+					"name": "",
+					"enabled": true
 				}
 			}
 		},
@@ -435,19 +480,21 @@
 			"width": 140.0,
 			"inputs": {
 				"0": {
-					"default_value": -1.0
+					"default_value": -1.0,
+					"enabled": true
 				},
 				"1": {
-					"default_value": -1.0
+					"default_value": -1.0,
+					"enabled": true
 				},
 				"2": {
-					"default_value": 0.5,
-					"enabled": false
+					"default_value": 0.5
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Value",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Reroute.003",
@@ -472,18 +519,22 @@
 			"width": 140.0,
 			"inputs": {
 				"0": {
-					"default_value": 0.5
+					"default_value": 0.5,
+					"enabled": true
 				},
 				"1": {
-					"default_value": -1.0
+					"default_value": -1.0,
+					"enabled": true
 				},
 				"2": {
-					"default_value": 1.0
+					"default_value": 1.0,
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Value",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Reroute",
@@ -507,12 +558,14 @@
 			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input"
+					"name": "Input",
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Math.004",
@@ -541,36 +594,45 @@
 			"inputs": {
 				"0": {
 					"name": "Tex Coordinate",
-					"default_value": 0.5
+					"default_value": 0.5,
+					"enabled": true
 				},
 				"1": {
-					"name": "Shift"
+					"name": "Shift",
+					"enabled": true
 				},
 				"2": {
 					"name": "Low",
-					"default_value": 0.5
+					"default_value": 0.5,
+					"enabled": true
 				},
 				"3": {
 					"name": "High",
-					"default_value": 0.5
+					"default_value": 0.5,
+					"enabled": true
 				},
 				"4": {
-					"name": "Mask"
+					"name": "Mask",
+					"enabled": true
 				},
 				"5": {
 					"name": "Tex Size",
-					"default_value": 0.5
+					"default_value": 0.5,
+					"enabled": true
 				},
 				"6": {
-					"name": "Clamp"
+					"name": "Clamp",
+					"enabled": true
 				},
 				"7": {
-					"name": "Mirror"
+					"name": "Mirror",
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "UV Coord",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Math.001",
@@ -665,5 +727,10 @@
 			"bl_idname": "NodeSocketVector"
 		}
 	],
-	"cached_hash": "c6a0a537d4180d93e0f485d09db32fa4"
+	"cached_hash": "4853c4f25b5113a580ed3e26b65a9c1c",
+	"bpy_ver": [
+		3,
+		2,
+		0
+	]
 }
