--- a/fast64_internal/f3d/node_library/ApplyFresnel.json
+++ b/fast64_internal/f3d/node_library/ApplyFresnel.json
@@ -21,22 +21,26 @@
 			"inputs": {
 				"0": {
 					"name": "Fac",
-					"default_value": 0.5
+					"default_value": 0.5,
+					"enabled": true
 				},
 				"1": {
 					"name": "Input0",
 					"default_value": 0.5,
+					"enabled": true,
 					"hide_value": true
 				},
 				"2": {
 					"name": "Input1",
 					"default_value": 0.5,
+					"enabled": true,
 					"hide_value": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Value",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group Output",
@@ -63,19 +67,21 @@
 			"width": 140.0,
 			"inputs": {
 				"0": {
-					"default_value": 0.5
+					"default_value": 0.5,
+					"enabled": true
 				},
 				"1": {
-					"default_value": 0.5
+					"default_value": 0.5,
+					"enabled": true
 				},
 				"2": {
-					"default_value": 0.5,
-					"enabled": false
+					"default_value": 0.5
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Value",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.004",
@@ -99,12 +105,14 @@
 			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input"
+					"name": "Input",
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.004",
@@ -124,7 +132,6 @@
 				116.807,
 				193.8259
 			],
-			"blend_type": "MIX",
 			"color": [
 				0.6079999804496765,
 				0.6079999804496765,
@@ -135,7 +142,8 @@
 			"inputs": {
 				"0": {
 					"name": "Fac",
-					"default_value": 0.5
+					"default_value": 0.5,
+					"enabled": true
 				},
 				"1": {
 					"name": "Color1",
@@ -144,7 +152,8 @@
 						0.5,
 						0.5,
 						1.0
-					]
+					],
+					"enabled": true
 				},
 				"2": {
 					"name": "Color2",
@@ -153,18 +162,14 @@
 						0.5,
 						0.5,
 						1.0
-					]
+					],
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Color",
-					"default_value": [
-						0.0,
-						0.0,
-						0.0,
-						0.0
-					],
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group Output",
@@ -188,12 +193,14 @@
 			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input"
+					"name": "Input",
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Mix.001",
@@ -219,18 +226,15 @@
 			"inputs": {
 				"0": {
 					"name": "Color",
-					"default_value": [
-						0.0,
-						0.0,
-						0.0,
-						0.0
-					]
+					"enabled": true
 				},
 				"1": {
-					"name": "Alpha"
+					"name": "Alpha",
+					"enabled": true
 				},
 				"2": {
-					"name": ""
+					"name": "",
+					"enabled": true
 				}
 			}
 		},
@@ -248,12 +252,14 @@
 			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input"
+					"name": "Input",
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Reroute.054",
@@ -277,12 +283,14 @@
 			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input"
+					"name": "Input",
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Math",
@@ -310,12 +318,26 @@
 			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input"
+					"name": "Input",
+					"default_value": [
+						0.0,
+						0.0,
+						0.0,
+						1.0
+					],
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
+					"default_value": [
+						0.0,
+						0.0,
+						0.0,
+						1.0
+					],
+					"enabled": true,
 					"links": [
 						{
 							"node": "Mix.001",
@@ -339,12 +361,14 @@
 			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input"
+					"name": "Input",
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Group.004",
@@ -368,12 +392,14 @@
 			"width": 16.0,
 			"inputs": {
 				"0": {
-					"name": "Input"
+					"name": "Input",
+					"enabled": true
 				}
 			},
 			"outputs": {
 				"0": {
 					"name": "Output",
+					"enabled": true,
 					"links": [
 						{
 							"node": "Mix.001",
@@ -404,6 +430,7 @@
 						0.5,
 						1.0
 					],
+					"enabled": true,
 					"links": [
 						{
 							"node": "Reroute",
@@ -414,6 +441,7 @@
 				"1": {
 					"name": "Alpha",
 					"default_value": 0.5,
+					"enabled": true,
 					"hide_value": true,
 					"links": [
 						{
@@ -424,6 +452,7 @@
 				},
 				"2": {
 					"name": "G_FRESNEL_ALPHA",
+					"enabled": true,
 					"hide_value": true,
 					"links": [
 						{
@@ -435,6 +464,7 @@
 				"3": {
 					"name": "G_FRESNEL_COLOR",
 					"default_value": 1,
+					"enabled": true,
 					"hide_value": true,
 					"links": [
 						{
@@ -446,6 +476,7 @@
 				"4": {
 					"name": "Fresnel",
 					"default_value": 0.5,
+					"enabled": true,
 					"hide_value": true,
 					"links": [
 						{
@@ -453,6 +484,10 @@
 							"index": 0
 						}
 					]
+				},
+				"5": {
+					"name": "",
+					"enabled": true
 				}
 			}
 		}
@@ -503,12 +538,6 @@
 	"outputs": [
 		{
 			"name": "Color",
-			"default_value": [
-				0.0,
-				0.0,
-				0.0,
-				0.0
-			],
 			"bl_idname": "NodeSocketColor"
 		},
 		{
@@ -518,5 +547,10 @@
 			"bl_idname": "NodeSocketFloat"
 		}
 	],
-	"cached_hash": "56f6de16ce8eac63e78492885bc5b899"
+	"cached_hash": "069e885ee17e92e4b9b0feadb1fe48f4",
+	"bpy_ver": [
+		3,
+		2,
+		0
+	]
 }
